Fixed overflow for loading view

--- a/src/components/preloader/preloader.scss
+++ b/src/components/preloader/preloader.scss
@@ -16,6 +16,7 @@
     z-index: 1000;
     cursor: wait;
     user-select: none;
+    overflow: hidden;
 
     background: black;
 
